# osi-substrait

./: Cargo.toml  README.md
src/: error.rs  lib.rs  sql_quote.rs  validate.rs
src/emit/: error.rs  mod.rs  sql.rs  substrait.rs
src/model/: ai_context.rs  dataset.rs  document.rs  enums.rs  expression.rs  extensions.rs  field.rs  metric.rs  mnml_dialect.rs  mnml_expression.rs  mod.rs  relationship.rs  semantic_model.rs
src/parser/: mod.rs
src/plan/: display.rs  expr.rs  mnml.rs  mod.rs  sql_format.rs
src/planner/: mod.rs
src/query/: mod.rs  spec.rs
src/resolver/: bind.rs  error.rs  mod.rs
tests/: osi.rs  query_plan.rs
tests/fixtures/: disconnected.yaml  minimal.yaml  mnml_expressions.yaml  people_daily_tenant.yaml  steelwheels.yaml
